Fixes for surefire module dependencies